Mainly cosmetic changes and fixed up new user login after registration occurs.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title><%= Setting::business_name %>-<%= @title || "" %></title>
   <meta name="keywords" content="<%= Setting::meta_tags %>"/>
-  <%= stylesheet_link_tag 'application', 'ddtabmenu', 'textile-editor', 'jquery-ui-1.8.11.custom' %>
+  <%= stylesheet_link_tag 'application', 'textile-editor', 'jquery-ui-1.8.11.custom' %>
   <%= javascript_include_tag 'application', 'jquery-1.5.1.min', 'jquery-ui-1.8.2.custom.min', 'jquery.effects.core.min','jquery.effects.slide.min', 'rails', 'autocomplete-rails', 'textile-editor' %>
   <%= csrf_meta_tag %>
   <script type="text/javascript">
@@ -68,8 +68,6 @@ $(function() {
   <p>
     Powered by <a href="http://myitcrm.com">MyIT CRM</a>&copy; 2010 - 2011 - v2.0.0.0 ALPHA - Glen Vanderhel
   </p>
-
-
 </div>
 </body>
 </html>
