--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -10,9 +10,9 @@
 <div id="ddtabs1" class="basictab">
   <ul>
     <li><a href="#new" rel="tab1"><%= t "workorder.tab_menu_new" %>&nbsp;(<% if @new_work_orders.count > 0 %><span style="color:red;"><%= @new_work_orders.count %></span><% else %><%= @new_work_orders.count %><% end %>)</a></li>
-    <li><a href="#assigned" rel="tab2"><%= t "workorder.tab_menu_assigned" %>&nbsp;(<%= @assigned_work_orders.count %>)</a></li>
-    <li><a href="#on_hold" rel="tab3"><%= t "workorder.tab_menu_on_hold" %>&nbsp;(<%= @on_hold_work_orders.count %>)</a></li>
-    <li><a href="#closed" rel="tab4"><%= t "workorder.tab_menu_closed" %>&nbsp;(<%= @closed_work_orders.count %>)</a></li>
+    <li><a href="#assigned" rel="tab2"><%= t "workorder.tab_menu_assigned" %>&nbsp;(<% if @assigned_work_orders.count > 0 %><span style="color:red;"><%= @assigned_work_orders.count %></span><% else %><%= @assigned_work_orders.count %><% end %>)</a></li>
+    <li><a href="#on_hold" rel="tab3"><%= t "workorder.tab_menu_on_hold" %>&nbsp;(<% if @on_hold_work_orders.count > 0 %><span style="color:red;"><%= @on_hold_work_orders.count %></span><% else %><%= @on_hold_work_orders.count %><% end %>)</a></li>
+    <li><a href="#closed" rel="tab4"><%= t "workorder.tab_menu_closed" %>&nbsp;(<% if @closed_work_orders.count > 0 %><span style="color:red;"><%= @closed_work_orders.count %></span><% else %><%= @closed_work_orders.count %><% end %>)</a></li>
   </ul>
 </div>
 <div id="index_table">
